--- a/index.css
+++ b/index.css
@@ -1,12 +1,27 @@
+body {
+	background-color: #080708;
+	font-family: 'Reem Kufi Fun', sans-serif;
+}
+
+.theme-light {
+	background-color: #e6e8e6;
+}
+
+#fswd {
+	letter-spacing: 0.1rem;
+}
+
 #landing {
 	margin-top: 3rem;
 	background-size: cover;
 	background-position: center;
-
 }
 
 .navbar-brand {
-	font-size: 1.5rem !important;
+	font-size: 1.8rem !important;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 800;
+	letter-spacing: 0.1rem;
 }
 
 #fg-landing {
@@ -18,12 +33,14 @@
 }
 
 .scrolled {
-	background-color: #c3cac2;
 	transition: 0.4s;
 	box-shadow: 0px 1px 10px #333;
-
 }
 
 .scrolled a {
 	color: #343a40;
+}
+
+.scrolled [href="#main"]  {
+	font-weight: bold;
 }
