change font for body, add content to Landing page

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #080708;
-	font-family: 'Reem Kufi Fun', sans-serif;
+/*	font-family: 'Reem Kufi Fun', sans-serif;*/
+	font-family: 'Reem Kufi', sans-serif;
 }
 
 .theme-light {
