--- a/index.css
+++ b/index.css
@@ -8,6 +8,10 @@ body {
 	background-color: #e6e8e6;
 }
 
+.nav-item {
+	font-size: 1.2rem;
+}
+
 #aboutme p, #aboutme h2 {
 	font-weight: bold;
 }
@@ -16,6 +20,8 @@ body {
 	font-size: 1.5rem;
 	letter-spacing: 0.12rem;
 	line-height: 1.5;
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
 }
 
 #fswd {
@@ -23,9 +29,10 @@ body {
 }
 
 #landing {
-	margin-top: 3rem;
+	margin-top: 10rem;
 	background-size: cover;
 	background-position: center;
+	min-height: 40vh;
 }
 
 .navbar-brand {
