--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
 	background-color: #080708;
 /*	font-family: 'Reem Kufi Fun', sans-serif;*/
 	font-family: 'Reem Kufi', sans-serif;
+	color: #eff6e0;
 }
 
 .theme-light {
