--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
 	font-size: 1.2rem;
 }
 
-#aboutme p, #aboutme h2 {
+ #aboutme h2 {
 	font-weight: bold;
 }
 
@@ -28,6 +28,14 @@ body {
 	margin-top: 2.5rem;
 	margin-bottom: 2.5rem;
 	word-spacing: 0.5rem;
+}
+
+#social-links {
+}
+
+#social-links a {
+	color: #eff6e0;
+	font-size: 1.2rem;
 }
 
 #fswd {
