--- a/index.css
+++ b/index.css
@@ -107,6 +107,12 @@ body {
 	scroll-margin-top: 5rem;
 }
 
+#projects div h2 {
+	font-size: 2.5rem;
+	letter-spacing: 0.1rem;
+	font-weight: bold;
+}
+
 .project-description p{
 	letter-spacing: 0.05rem;
 	word-spacing: 0.1rem;
@@ -115,6 +121,12 @@ body {
 /* END PROJECTS SECTION */
 
 /* TOOLS SECTION */
+#tools div h2 {
+	font-size: 2.5rem;
+	letter-spacing: 0.1rem;
+	font-weight: bold;
+}
+
 #tools{
 	scroll-margin-top: 5rem;
 }
@@ -130,6 +142,12 @@ body {
 #contact {
 	min-height: 60vh;
 	scroll-margin-top: 5rem;
+}
+
+#contact div h2 {
+	font-size: 2.5rem;
+	letter-spacing: 0.1rem;
+	font-weight: bold;
 }
 
 #contact label {
