add theme-dark css ruleset, add theme-dark class to footer, add theme-dark to navbar, remove when scrolled

--- a/index.css
+++ b/index.css
@@ -20,11 +20,16 @@ body {
 }
 /* END FLOATING SCROLL BUTTON */
 
+
+/* NAVBAR */
 .theme-light {
 	background-color: #e6e8e6;
 }
 
-/* NAVBAR */
+.theme-dark {
+	background-color: #14182c;
+}
+
 .navbar-brand {
 	color: #ffffff80;
 	font-size: 2rem !important;
